fix layout issues

--- a/style.css
+++ b/style.css
@@ -196,14 +196,15 @@ header svg {
 }
 
 #itemSection {
+    width: 100%;
     display: grid;
+    place-items: center;
     grid-template-columns: 1fr 1fr 1fr;
     /* overflow-y: scroll; */
 }
 
 .purchaseItem {
     width: 90%;
-    aspect-ratio: 1/1;
     display: flex;
     justify-content: center;
     align-items: center;
